@@ -1,20 +1,20 @@
 package com.artillexstudios.axinventoryrestore.commands;
 
-import com.artillexstudios.axapi.serializers.Serializers;
+import com.artillexstudios.axapi.scheduler.Scheduler;
 import com.artillexstudios.axapi.utils.StringUtils;
 import com.artillexstudios.axinventoryrestore.AxInventoryRestore;
 import com.artillexstudios.axinventoryrestore.events.WebHooks;
 import com.artillexstudios.axinventoryrestore.guis.MainGui;
-import com.artillexstudios.axinventoryrestore.utils.PermissionUtils;
-import com.artillexstudios.axinventoryrestore.utils.SerializationUtils;
 import org.bukkit.Bukkit;
-import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
+import revxrsal.commands.annotation.AutoComplete;
+import revxrsal.commands.annotation.Command;
+import revxrsal.commands.annotation.DefaultFor;
+import revxrsal.commands.annotation.Subcommand;
+import revxrsal.commands.bukkit.annotation.CommandPermission;
 
-import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
@@ -24,109 +24,93 @@ import static com.artillexstudios.axinventoryrestore.AxInventoryRestore.DISCORD;
 import static com.artillexstudios.axinventoryrestore.AxInventoryRestore.MESSAGES;
 import static com.artillexstudios.axinventoryrestore.AxInventoryRestore.MESSAGEUTILS;
 
-public class Commands implements CommandExecutor {
+@Command({"axinventoryrestore", "axir", "axinvrestore", "invrestore", "inventoryrestore"})
+public class Commands {
 
-    @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command cmd, @NotNull String s, @NotNull String[] args) {
-
-        if (args.length == 1 && args[0].equals("reload")) {
-            if (!PermissionUtils.hasPermission(sender, "reload")) {
-                MESSAGEUTILS.sendLang(sender, "errors.no-permission");
-                return true;
-            }
-
-            Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff[AxInventoryRestore] &#66aaffReloading configuration..."));
-            if (!CONFIG.reload()) {
-                MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "config.yml"));
-                return true;
-            }
-            Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fconfig.yml&#00FF00!"));
-
-            if (!MESSAGES.reload()) {
-                MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "messages.yml"));
-                return true;
-            }
-            Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fmessages.yml&#00FF00!"));
-            if (!DISCORD.reload()) {
-                MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "discord.yml"));
-                return true;
-            }
-            Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fdiscord.yml&#00FF00!"));
-            WebHooks.reload();
-
-            Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╚ &#00FF00Successful reload!"));
-            MESSAGEUTILS.sendLang(sender, "reloaded");
-            return true;
+    @DefaultFor({"~", "~ help"})
+    public void help(@NotNull CommandSender sender) {
+        for (String m : MESSAGES.getStringList("help")) {
+            sender.sendMessage(StringUtils.formatToString(m));
         }
+    }
 
-        if (args.length == 1 && args[0].equals("cleanup")) {
-            if (!PermissionUtils.hasPermission(sender, "cleanup")) {
-                MESSAGEUTILS.sendLang(sender, "errors.no-permission");
-                return true;
-            }
-
-            MESSAGEUTILS.sendLang(sender, "cleaned-up");
-            return true;
-        }
-
-        if (args.length == 1) {
-            if (!PermissionUtils.hasPermission(sender, "view")) {
-                MESSAGEUTILS.sendLang(sender, "errors.no-permission");
-                return true;
-            }
-
-            final UUID uuid = AxInventoryRestore.getDB().getUUID(args[0]);
+    @Subcommand("view")
+    @CommandPermission("axinventoryrestore.view")
+    @AutoComplete("@offlinePlayers")
+    public void view(Player sender, String player) {
+        AxInventoryRestore.getThreadedQueue().submit(() -> {
+            final UUID uuid = AxInventoryRestore.getDB().getUUID(player);
             if (uuid == null) {
                 MESSAGEUTILS.sendLang(sender, "errors.unknown-player");
-                return true;
+                return;
             }
 
             final Integer userId = AxInventoryRestore.getDB().getUserId(uuid);
             if (userId == null) {
                 MESSAGEUTILS.sendLang(sender, "errors.unknown-player");
-                return true;
+                return;
             }
 
-            if (!(sender instanceof Player)) {
-                MESSAGEUTILS.sendLang(sender, "errors.not-player");
-                return true;
-            }
+            final String name = Bukkit.getOfflinePlayer(uuid).getName();
+            Scheduler.get().runAt(sender.getLocation(), t -> new MainGui(uuid, sender, name == null ? player : name).openMainGui());
+        });
+    }
 
-            new MainGui(uuid, (Player) sender, args[0]).openMainGui();
-            return true;
+    @Subcommand("reload")
+    @CommandPermission("axinventoryrestore.reload")
+    public void reload(CommandSender sender) {
+        Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff[AxInventoryRestore] &#66aaffReloading configuration..."));
+        if (!CONFIG.reload()) {
+            MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "config.yml"));
+            return;
         }
+        Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fconfig.yml&#00FF00!"));
 
-        if (args.length == 2 && args[0].equals("save")) {
-            if (!PermissionUtils.hasPermission(sender, "manualbackup")) {
-                MESSAGEUTILS.sendLang(sender, "errors.no-permission");
-                return true;
-            }
-
-            final String cause = MESSAGES.getString("manual-created-by").replace("%player%", sender.getName());
-
-            if (args[1].equals("*")) {
-               for (Player pl : Bukkit.getOnlinePlayers()) {
-                   AxInventoryRestore.getDB().saveInventory(pl, "MANUAL", cause);
-               }
-
-               MESSAGEUTILS.sendLang(sender, "manual-backup-all");
-               return true;
-            }
-
-            if (Bukkit.getPlayer(args[1]) == null) {
-                MESSAGEUTILS.sendLang(sender, "errors.player-offline");
-                return true;
-            }
-
-            AxInventoryRestore.getDB().saveInventory(Bukkit.getPlayer(args[1]), "MANUAL", cause);
-
-            MESSAGEUTILS.sendLang(sender, "manual-backup", Map.of("%player%", Bukkit.getPlayer(args[1]).getName()));
-            return true;
+        if (!MESSAGES.reload()) {
+            MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "messages.yml"));
+            return;
         }
-;
-        for (String m : MESSAGES.getStringList("help")) {
-            sender.sendMessage(StringUtils.formatToString(m));
+        Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fmessages.yml&#00FF00!"));
+        if (!DISCORD.reload()) {
+            MESSAGEUTILS.sendLang(sender, "reload-fail", Collections.singletonMap("%file%", "discord.yml"));
+            return;
         }
-        return true;
+        Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╠ &#00FF00Reloaded &fdiscord.yml&#00FF00!"));
+        WebHooks.reload();
+
+        Bukkit.getConsoleSender().sendMessage(StringUtils.formatToString("&#00aaff╚ &#00FF00Successful reload!"));
+        MESSAGEUTILS.sendLang(sender, "reloaded");
+    }
+
+    @Subcommand("cleanup")
+    @CommandPermission("axinventoryrestore.cleanup")
+    public void cleanup(CommandSender sender) {
+        AxInventoryRestore.getThreadedQueue().submit(() -> AxInventoryRestore.getDB().cleanup());
+        MESSAGEUTILS.sendLang(sender, "cleaned-up");
+    }
+
+    @Subcommand("save")
+    @CommandPermission("axinventoryrestore.manualbackup")
+    public void save(CommandSender sender, Player player) {
+        final String cause = MESSAGES.getString("manual-created-by").replace("%player%", sender.getName());
+
+        for (int i = 0; i < 10000; i++) {
+            AxInventoryRestore.getThreadedQueue().submit(() -> AxInventoryRestore.getDB().saveInventory(player, "MANUAL", cause));
+        }
+        MESSAGEUTILS.sendLang(sender, "manual-backup", Map.of("%player%", player.getName()));
+    }
+
+    @Subcommand("saveall")
+    @CommandPermission("axinventoryrestore.manualbackup")
+    public void saveall(CommandSender sender) {
+        final String cause = MESSAGES.getString("manual-created-by").replace("%player%", sender.getName());
+
+        AxInventoryRestore.getThreadedQueue().submit(() -> {
+            for (Player pl : Bukkit.getOnlinePlayers()) {
+                AxInventoryRestore.getDB().saveInventory(pl, "MANUAL", cause);
+            }
+        });
+
+        MESSAGEUTILS.sendLang(sender, "manual-backup-all");
     }
 }
